--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "marvel-site",
-  "homepage": "http://gitname.github.io/marvel-site/",
+  "homepage": "https://tomsenter.github.io/marvel-site/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
